Add Find roomate functionality, extend navbar to all pages, update README

--- a/feedback.html
+++ b/feedback.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <title>Student Accommodation Feedback</title>
 </head>
+<!-- Do not delete this extends the navbar -->
+<div id="navbar"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(function(){
+        $("#navbar").load("navbar.html");
+    });
+</script>
+
+
 <body>
     <h1>Student Accommodation Feedback</h1>
     <p>We value your feedback. Please share your thoughts with us:</p>
