--- a/forum.html
+++ b/forum.html
@@ -36,6 +36,14 @@
         }
     </style>
 </head>
+<!-- Do not delete this extends the navbar -->
+<div id="navbar"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(function(){
+        $("#navbar").load("navbar.html");
+    });
+</script>
 <body>
     <header>
         <h1>University of Arkansas Student Housing Forum</h1>
