--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
 
     <!-- Navbar -->
@@ -19,23 +18,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="listings.html" target="blank">Listings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="roomates.html" target="blank">Find a Roomate</a>
+                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="forum.html">Forum</a>
+                    <a class="nav-link" href="forum.html" target="blank">Forum</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="listings.html">Listings</a>
+                    <a class="nav-link" href="feedback.html" target="blank">Feedback</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="roomates.html">Find a Roomate</a>
+                    <a class="nav-link" href="signin.html" target="blank">Sign In</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="signin.html">Sign In</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="signup.html">Sign Up</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="feedback.html">Feedback</a>
+                    <a class="nav-link" href="signup.html" target="blank">Sign Up</a>
                 </li>
             </ul>
         </div>
