--- a/signin.html
+++ b/signin.html
@@ -94,3 +94,13 @@ span.psw {
 
 </body>
 </html>
+
+<!-- Do not delete this extends the navbar -->
+<div id="navbar"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(function(){
+        $("#navbar").load("navbar.html");
+    });
+</script>
+-- >>>>>>> 2adf3daf0cda38ae6cd464ba76955f381c11a264--
