--- a/signin.html
+++ b/signin.html
@@ -95,7 +95,7 @@ span.psw {
 </body>
 </html>
 
-<!-- Do not delete this extends the navbar -->
+<!-- Do not delete this extends the navbar 2adf3daf0cda38ae6cd464ba76955f381c11a264-- >
 <div id="navbar"></div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
@@ -103,4 +103,3 @@ span.psw {
         $("#navbar").load("navbar.html");
     });
 </script>
--- >>>>>>> 2adf3daf0cda38ae6cd464ba76955f381c11a264--
