sign in and sign up page

--- a/signin.html
+++ b/signin.html
@@ -70,6 +70,16 @@ span.psw {
 }
 </style>
 </head>
+
+<!-- Do not delete this extends the navbar -->
+<div id="navbar"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(function(){
+        $("#navbar").load("navbar.html");
+    });
+</script>
+
 <body>
 
   <div class="container">
