--- a/signin.html
+++ b/signin.html
@@ -71,7 +71,7 @@ span.psw {
 </style>
 </head>
 
-<!-- Do not delete this extends the navbar -->
+<<!-- Do not delete this extends the navbar -->
 <div id="navbar"></div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
