add search feature
search bar and button to navigation bar and enhanced listings page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Student Accommodation</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -63,6 +64,34 @@
             padding: 50px 0;
             text-align: center;
         }
+        form.example {
+            display: flex;
+            align-items: center; /* Center vertically */
+        }
+
+        form.example input[type="text"] {
+            width: 82%; /* Maintain the width */
+            height: 38px; /* Match button height */
+            padding: 10px;
+            font-size: 17px;
+            border: 1px solid grey;
+            background: #f1f1f1;
+        }
+
+        form.example button {
+            height: 38px; /* Match input height */
+            padding: 10px;
+            background: #9D2235;
+            color: white;
+            font-size: 17px;
+            border: 1px solid grey;
+            border-left: none;
+            cursor: pointer;
+        }
+
+        form.example button:hover {
+            background: #ffd700;
+        }
     </style>
 </head>
 <body>
@@ -90,6 +119,13 @@
                     <a class="nav-link" href="feedback.html" target ="blank">Feedback</a>
                 </li>
             </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <form class="example" action="/action_page.php">
+                        <input type="text" placeholder="Search.." name="search2">
+                        <button type="submit"><i class="fa fa-search"></i></button>
+                    </form>
+                </li>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="btn btn-outline-light mr-2" href="signin.html" target ="blank">Sign In</a>
