--- a/navbar.html
+++ b/navbar.html
@@ -1,27 +1,64 @@
+<!DOCTYPE html>
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
     <style>
         .navbar {
             background-color: #9D2235;
         }
+
         .navbar .navbar-brand,
         .navbar .nav-link {
             color: white;
         }
+
         .navbar .nav-link:hover {
             color: #ffd700;
             transition: color 0.2s;
         }
+
         .navbar-toggler-icon {
             filter: invert(100%);
         }
+
         .navbar .navbar-brand {
-        font-size: 1.5rem;
-        font-weight: bold;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        form.example {
+            display: flex;
+            align-items: center; /* Center vertically */
+        }
+
+        form.example input[type="text"] {
+            width: 82%; /* Maintain the width */
+            height: 38px; /* Match button height */
+            padding: 10px;
+            font-size: 17px;
+            border: 1px solid grey;
+            background: #f1f1f1;
+        }
+
+        form.example button {
+            height: 38px; /* Match input height */
+            padding: 10px;
+            background: #9D2235;
+            color: white;
+            font-size: 17px;
+            border: 1px solid grey;
+            border-left: none;
+            cursor: pointer;
+        }
+
+        form.example button:hover {
+            background: #ffd700;
         }
     </style>
 </head>
@@ -29,7 +66,8 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="index.html">UARK Student Accommodation</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -49,6 +87,12 @@
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <form class="example" action="/action_page.php">
+                        <input type="text" placeholder="Search.." name="search2">
+                        <button type="submit"><i class="fa fa-search"></i></button>
+                    </form>
+                </li>
+                <li class="nav-item">
                     <a class="btn btn-outline-light mr-2" href="signin.html">Sign In</a>
                 </li>
                 <li class="nav-item">
@@ -58,3 +102,5 @@
         </div>
     </nav>
 </body>
+
+</html>
