--- a/signin.html
+++ b/signin.html
@@ -98,18 +98,8 @@ span.psw {
 
   <div class="container" style="background-color:#f1f1f1">
     <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
+  <span class="psw"><a href="changepassword.html">change password?</a></span>
   </div>
 </form>
-
 </body>
 </html>
-
-<!-- Do not delete this extends the navbar 2adf3daf0cda38ae6cd464ba76955f381c11a264-- >
-<div id="navbar"></div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
-    $(function(){
-        $("#navbar").load("navbar.html");
-    });
-</script>
