--- a/navbar.html
+++ b/navbar.html
@@ -84,6 +84,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="feedback.html">Feedback</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="chatbot.html">Chatbot</a>
+                </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
