schedule tour changes
changes for schedule tour

--- a/listings.html
+++ b/listings.html
@@ -104,7 +104,7 @@ img {
       </div>
     </a>
   
-    <a href="Lofts.html" class="property-link">
+    <a href="Lofts1.html" class="property-link">
       <div class="border">
         <img src="apartment2.jpg" alt="Your Image">
         <h3 class="text">Sweetser Property Apartments</h3>
