add contact to phone
feature to add contact to phone update navbar bug

--- a/index.html
+++ b/index.html
@@ -98,25 +98,26 @@
 
     <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="index.html">UARK Student Accommodation</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="listings.html" target="blank">Listings</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="roomates.html" target="blank">Find a Roomate</a>
-                </li>
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="forum.html" target="blank">Forum</a>
+                    <a class="nav-link" href="forum.html">Forum</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="roommates.html" target="blank">Find Roommates</a>
+                    <a class="nav-link" href="listings.html">Listings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="feedback.html" target ="blank">Feedback</a>
+                    <a class="nav-link" href="roommates.html">Find Roommates</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="feedback.html">Feedback</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="chatbot.html">Chatbot</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
@@ -126,12 +127,11 @@
                         <button type="submit"><i class="fa fa-search"></i></button>
                     </form>
                 </li>
-            <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="btn btn-outline-light mr-2" href="signin.html" target ="blank">Sign In</a>
+                    <a class="btn btn-outline-light mr-2" href="signin.html">Sign In</a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-outline-light" href="signup.html" target ="blank">Sign Up</a>
+                    <a class="btn btn-outline-light" href="signup.html">Sign Up</a>
                 </li>
             </ul>
         </div>
