--- a/forum.html
+++ b/forum.html
@@ -13,7 +13,6 @@
             background-color: #f2f2f2;
         }
         header {
-            background-color: #333;
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -27,7 +26,7 @@
             border-radius: 5px;
         }
         h1 {
-            color: #333;
+            color: black;
         }
         .forum-post {
             border: 1px solid #ccc;
@@ -106,9 +105,7 @@
     });
 </script>
 <body>
-    <header>
-        <h1>University of Arkansas Student Housing Forum</h1>
-    </header>
+
     <div class="container">
         
         <h2>Forum</h2>
