--- a/feedback.html
+++ b/feedback.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <title>University of Arkansas Housing FAQs</title>
 </head>
+<!-- Do not delete this extends the navbar -->
+<div id="navbar"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(function(){
+        $("#navbar").load("navbar.html");
+    });
+</script>
 <body>
     <header>
         <h1>University of Arkansas Housing FAQs</h1>
