changes to website

--- a/changepassword.html
+++ b/changepassword.html
@@ -76,7 +76,7 @@
     </style>
 </head>
 
-<<!-- Do not delete this extends the navbar -->
+<!-- Do not delete this extends the navbar -->
 <div id="navbar"></div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
@@ -92,21 +92,21 @@
     <form method="post" action="process-reset-password.php">
 
         <label for="email">Email</label>
-        <input type="email" id="email" name="email">
+        <input type="email" id="email" name="email" required>
 
         <input type="hidden" name="token" value="<?= htmlspecialchars($token) ?>">
 
         <label for="password">Old password</label>
-        <input type="password" id="password" name="password">
+        <input type="password" id="password" name="password" required>
 
         <label for="password">New password</label>
-        <input type="password" id="password" name="password">
+        <input type="password" id="password" name="password" required>
 
         <label for="password_confirmation">Repeat new password</label>
         <input type="password" id="password_confirmation"
                name="password_confirmation">
 
-        <button>Confirm</button>
+        <button type="submit"><a href="confirmchangepassword.html">Confirm</a></button>
     </form>
 
 </body>
