--- a/signup.html
+++ b/signup.html
@@ -110,7 +110,7 @@ button:hover {
 
     <div class="clearfix">
       <button type="button" class="cancelbtn">Cancel</button>
-      <button type="submit" class="signupbtn">Sign Up</button>
+      <button type="submit" class="signupbtn"><a href="index.html">Sign Up</a></button>
     </div>
   </div>
 </form>
